# Learn-FastAPI

./: .gitignore  README.md  api.http  lesson1_main.py  lesson2_main.py  lesson3_main.py  lesson4_main.py  lesson5_main.py  lesson5_schemas.py  lesson6_decorator.py  lesson6_main.py  lesson7_db.sqlite  lesson7_models.py  main.py  main_lesson2.py  main_lesson3.py  main_lesson4.py  main_lesson5.py  pyproject.toml  schemas_lesson4.py
alembic_introduction/: docker-compose.yaml
async_introduction/: async_example.py  async_note.ipynb
lesson2/: lesson2_main.py
lesson3/: lesson3_main.py
lesson5/: lesson5_main.py  lesson5_schemas.py
lesson6/: lesson6_decorator.py  lesson6_main.py  lesson6_schemas.py
lesson7/: lesson7_db.py  lesson7_db.sqlite  lesson7_main.py
lesson8_alembic/: db.py  main.py  models.py
lesson8_alembic/migrations/: env.py
lesson8_introduction_of_alembic/: alembic.ini  create_database.py  insert.py  note.ipynb  test.db
lesson8_introduction_of_alembic/migrations/: env.py
