[project]
name = "learn-fastapi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.17.2",
    "fastapi>=0.121.2",
    "jupyterlab>=4.5.0",
    "pyinstrument>=5.1.1",
    "sqlmodel>=0.0.27",
    "uvicorn>=0.38.0",
    "viztracer>=1.1.1",
]
